--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Tetris</title>
 </head>
 <body>
-        <h1>Hello Tetris</h1>
+        <canvas id="tetris" width="200" height="400"></canvas>
+        <script src="tetrominoes.js"></script>
+        <script src="tetris.js"></script>
 </body>
 </html>
