--- a/index.html
+++ b/index.html
@@ -6,9 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Tetris</title>
+    <style>
+        #score{
+            display: inline;
+        }
+        div{
+            font-size: 25px;
+            font-weight: bold;
+            font-family: monospace;
+        }
+    </style>
 </head>
 <body>
         <canvas id="tetris" width="200" height="400"></canvas>
+        <div>
+            Score : <div id="score">0</div>
+        </div>
         <script src="tetrominoes.js"></script>
         <script src="tetris.js"></script>
 </body>
